src/objects/AutoInvoiceSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AutoPost_CreditNotes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will the Credit notes be automatically posted?</description>
        <label>AutoPost CreditNotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoPost_Invoices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will the Invoices be automatically posted?</description>
        <label>AutoPost Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Invoice_Delay__c</fullName>
        <description>This will set the when a opp will be picked for invoicing, 0 is all eligible opps, 1 is all opps edited before hour and so on....</description>
        <label>Auto Invoice Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complywise_Last_Execution__c</fullName>
        <description>When was the last time comply wise auto invoice process triggered?</description>
        <inlineHelpText>When was the last time comply wise auto invoice process triggered?</inlineHelpText>
        <label>Complywise Last Execution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disable_Auto_Delivery_of_Credit_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit notes will not be automatically delivered (emailed/printed)</description>
        <label>Disable Auto Delivery of Credit Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Auto_Delivery_of_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoices will not be automatically delivered (emailed/printed)</description>
        <label>Disable Auto Delivery of Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notification_To__c</fullName>
        <description>Where will the start, stop or error messages be delivered</description>
        <label>Email Notification To</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Auto_Invoicing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will the auto invoicing run at all, removes the need to stop the schedule</description>
        <label>Enable Auto Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_Delivery_Workflow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will the workflow be fired to email or print invoices/credit notes</description>
        <label>Evaluate Delivery Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Auto_Email_for_Credit_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit notes will be automatically set to be emailed. if no email address is available, it will be printed</description>
        <label>Force Auto Email for Credit Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Auto_Email_for_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoices will be automatically set to be emailed. if no email address is available, it will be printed</description>
        <label>Force Auto Email for Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Opp_Controls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to stop opp controls from executing when doing bulk data updates</description>
        <inlineHelpText>Set this flag to stop opp controls from executing when doing bulk data updates</inlineHelpText>
        <label>Stop Opp Controls</label>
        <type>Checkbox</type>
    </fields>
    <label>AutoInvoiceSettings</label>
</CustomObject>